--- a/static_src/sass/main.scss
+++ b/static_src/sass/main.scss
@@ -3,141 +3,101 @@
 @tailwind utilities;
 
 @layer base {
-    // TODO load fonts 
-    // @font-face {
-    //     font-family: "Source Sans 3", sans-serif;
-    //     font-optical-sizing: auto;
-    //     font-weight: 400;
-    //     font-style: normal;
-    //     font-display: swap;
-    //     src: url('../fonts/SourceSans3-variable.woff2') format('woff2-variable');
-    // }
-    // @font-face {
-    //     font-family: "Source Serif 4", serif;
-    //     font-optical-sizing: auto;
-    //     font-weight: 400;
-    //     font-style: normal;
-    //     font-display: swap;
-    //     src: url('../fonts/SourceSerif4-variable.woff2') format('woff2-variable');
-    // }
-    // @font-face {
-    //     font-family: "Source Code Pro", monospace;
-    //     font-optical-sizing: auto;
-    //     font-weight: 400;
-    //     font-style: normal;
-    //     font-display: swap;
-    //     src: url('../fonts/SourceSerif4-variable.woff2') format('woff2-variable');
-    // }
+  html {
+    @apply font-sans text-black bg-white;
+  }
 
-    html {
-        @apply font-sans3 font-normal not-italic;
-        font-optical-sizing: auto;
-    }
+  body {
+    @apply flex flex-col min-h-screen overflow-x-hidden text-base leading-relaxed text-black bg-white;
+  }
 
-    body {
-        @apply flex flex-col min-h-screen text-mackerel-400 dark:text-white bg-white dark:bg-mackerel-400 overflow-x-hidden;
+  a,
+  button,
+  input,
+  select {
+    &:focus-visible {
+      @apply outline-black outline-[2px] outline-offset-2;
     }
-
-    a,
-    button,
-    input,
-    select {
-        &:focus-visible {
-            @apply outline-mackerel-300 outline-[3px] outline-offset-4;
-        }
-    }
+  }
 }
 
 @layer components {
-    .site-padding {
-        @apply px-6 sm:px-10 md:px-28 lg:px-40;
+  .site-padding {
+    @apply px-4 sm:px-6 md:px-10 lg:px-16;
+  }
+
+  .site-container {
+    @apply max-w-5xl mx-auto;
+  }
+
+  .rich-text {
+    @apply text-base md:text-lg;
+
+    h1, h2, h3, h4 {
+      @apply font-bold leading-tight text-black mb-4;
     }
 
-    .site-container {
-        @apply max-w-[1512px] mx-auto;
+    h1 {
+      @apply text-4xl md:text-5xl;
     }
 
-    .rich-text {
-        @apply text-lg md:text-xl;
-
-        h3 {
-            @apply text-2xl md:text-3xl font-medium leading-[150%] pt-7 mb-8 md:mb-10;
-        }
-
-        p {
-            @apply leading-7 mb-8 md:mb-10 last:mb-0;
-        }
-
-        a {
-            @apply underline underline-offset-8 decoration-[1.5px] decoration-mackerel-200 hover:decoration-mackerel-300;
-
-        }
-
-        ol {
-            @apply list-decimal list-outside ml-5;
-
-            li {
-
-                &:last-child {
-                    @apply mb-5;
-                }
-            }
-        }
-
-        ul {
-            @apply list-disc list-outside ml-5;
-
-            li {
-                &:last-child {
-                    @apply mb-5;
-                }
-            }
-        }
+    h2 {
+      @apply text-3xl md:text-4xl;
     }
-    // Controls the animation of the menu toggle button (hamburger to cross icon tranisition)
-    .button-menu-toggle {
-        position: relative;
-        display: block;
-        width: 25px;
-        height: 18px;
-        background: transparent;
-        border: 0;
-        transform: rotate(0deg);
-        transition: 0.25s ease-out;
-        margin: auto;
 
-        &__line {
-            @apply bg-mackerel-400 dark:bg-white;
-            position: absolute;
-            display: block;
-            width: 100%;
-            height: 2px;
-            transform: rotate(0deg);
-            transition: top, transform, color, 0.25s ease-out;
-
-            &:nth-child(1) {
-                top: 2px;
-
-                .mobile-menu-is-open & {
-                    @apply bg-white;
-                    transform: rotate(45deg);
-                }
-            }
-
-            &:nth-child(2) {
-                .mobile-menu-is-open & {
-                    @apply bg-white;
-                    top: 2px;
-                    transform: rotate(-45deg);
-                }
-            }
-        }
+    h3 {
+      @apply text-2xl md:text-3xl;
     }
-    .header-logo {
-        transition: color, 0.25s ease-out;
 
-        &.mobile-menu-is-open {
-            @apply text-white;
-        }
+    p {
+      @apply mb-5;
     }
+
+    a {
+      @apply text-black underline hover:text-gray-700;
+    }
+
+    ol {
+      @apply ml-6 list-decimal;
+    }
+
+    ul {
+      @apply ml-6 list-disc;
+    }
+
+    li {
+      @apply mb-2;
+    }
+  }
+
+  .button-menu-toggle {
+    @apply relative block w-[25px] h-[18px] bg-transparent border-0 m-auto transition-transform duration-200 ease-out;
+  }
+
+  .button-menu-toggle-line {
+    @apply absolute block w-full h-[2px] bg-black transition-all duration-200 ease-out;
+    top: 2px;
+  }
+
+  .mobile-menu-is-open .button-menu-toggle-line:first-child {
+    @apply bg-black rotate-45;
+  }
+
+  .mobile-menu-is-open .button-menu-toggle-line:nth-child(2) {
+    @apply bg-black -rotate-45 top-2;
+  }
+
+  .header-logo {
+    @apply text-black transition-colors duration-200;
+
+    &.mobile-menu-is-open {
+      @apply text-black;
+    }
+  }
 }
+
+// Override Wagtail userbar trigger box-shadow to canoe red - wont work  comes from wagtailadmin
+//wagtail/admin/wagtailadmin/css/core.css (from the venv site-packages library)
+//.w-userbar-trigger {
+//  box-shadow: 0 0 1px 0 #D63638, 0 1px 10px 0 #D63638b3 !important;
+//}
