--- a/templates/navigation/header.html
+++ b/templates/navigation/header.html
@@ -9,7 +9,7 @@
             href="/"
             data-header-logo
             class="header-logo z-30 uppercase font-semibold text-3xl"
-            aria-label="Go to the Wagtail Starter Kit homepage">
+            aria-label="Go to {{ current_site.site_name }} homepage">
             {{ current_site.site_name|default:"Site name" }}
         </a>
 
@@ -69,9 +69,9 @@
                         {% include "icons/magnifying-glass.html" with class="fill-current w-5 h-5" %}
                     </button>
                 </li>
-                <li>
-                    {% include "components/theme-toggle.html" %}
-                </li>
+<!--                <li>-->
+<!--                    {% include "components/theme-toggle.html" %}-->
+<!--                </li>-->
             </ul>
         </nav>
     </div>
@@ -130,7 +130,7 @@
             {% endfor %}
         </ul>
         {% include "components/search.html" with variant="mobile-menu" %}
-        {% include "components/theme-toggle.html" %}
+<!--        {% include "components/theme-toggle.html" %}-->
     </nav>
     </section>
 
